objects/csconta__Contract__c.object
<CustomObject>
    <fields>
        <fullName>csconta__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Contract_Being_Replaced__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Being Replaced</label>
        <referenceTo>csconta__Contract__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Contract_Name__c</fullName>
        <label>Contract Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Contract_Replacing_This_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Replacing This Contract</label>
        <referenceTo>csconta__Contract__c</referenceTo>
        <relationshipLabel>Contracts (Contract Replacing This Contract)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Frame_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Frame Agreement</label>
        <referenceTo>csconta__Frame_Agreement__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Pricing_Rule_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Rule Group</label>
        <referenceTo>cspmb__Pricing_Rule_Group__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>csconta__Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Contract</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Contract Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>